--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><script>const dest = 'https://giphy.com/gifs/throwback-rick-roll-astley-5kq0GCjHA8Rwc/tile';window.location = dest;</script></html>
+<script>const dest = 'https://giphy.com/gifs/throwback-rick-roll-astley-5kq0GCjHA8Rwc/tile';window.location = dest;</script>
