--- a/inception/index.html
+++ b/inception/index.html
@@ -1,1 +1,9 @@
 <iframe src="https://tvskart.github.io/inception/" width="100%" height="100%"></iframe>
+<script>
+const f = document.createElement('iframe');
+const rand = Math.random();
+f.src = `https://tvskart.github.io/inception/?v=${rand}`;
+f.width = "100%";
+f.height = "100%";
+document.body.appendChild(f);
+</script>
