--- a/inception/index.html
+++ b/inception/index.html
@@ -1,3 +1,4 @@
+<head>
 <script>
 const f = document.createElement('iframe');
 const rand = Math.random();
@@ -6,3 +7,6 @@ f.width = "100%";
 f.height = "100%";
 document.body.appendChild(f);
 </script>
+</head>
+<body></body>
+
