root and speedrun

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script>const dest = 'https://giphy.com/gifs/throwback-rick-roll-astley-5kq0GCjHA8Rwc/tile';window.location = dest;</script>
+<head>
+<style>
+html {
+  background: url(images/baby.gif) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
+</head>
