--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98828142-2"></script>
+<script src="static/js/ga.js"></script>
 <style>
 html {
   background: url(images/baby.gif) no-repeat center center fixed;
