use ganalytics instead of gtags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-98828142-2"></script>
 <script src="static/js/ga.js"></script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <style>
 html {
   background: url(images/baby.gif) no-repeat center center fixed;
