try to track redirects too

--- a/speedrun/index.html
+++ b/speedrun/index.html
@@ -1,1 +1,9 @@
-<script>const dest = 'https://giphy.com/gifs/storm-area-51-naruto-run-JRlqKEzTDKci5JPcaL/tile';window.location = dest;</script>
+<script src="static/js/ga.js"></script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<script>
+const dest = 'https://giphy.com/gifs/storm-area-51-naruto-run-JRlqKEzTDKci5JPcaL/tile';
+window.ga('send', 'event', 'redirect', 'redirect', dest, {
+  nonInteraction: true
+});
+window.location = dest;
+</script>
