--- a/speedrun/index.html
+++ b/speedrun/index.html
@@ -1,4 +1,4 @@
-<script src="static/js/ga.js"></script>
+<script src="../static/js/ga.js"></script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
 const dest = 'https://giphy.com/gifs/storm-area-51-naruto-run-JRlqKEzTDKci5JPcaL/tile';
