support ga with iframes too

--- a/rickroll/index.html
+++ b/rickroll/index.html
@@ -1,1 +1,16 @@
-<iframe src="https://giphy.com/gifs/throwback-rick-roll-astley-5kq0GCjHA8Rwc/tile" width="100%" height="100%"></iframe>
+<head>
+<script src="../static/js/ga.js"></script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<script>
+const dest = 'https://giphy.com/gifs/throwback-rick-roll-astley-5kq0GCjHA8Rwc/tile';
+window.ga('send', 'event', 'redirect', 'iframe', dest, {
+  nonInteraction: true
+});
+</script>
+</head>
+<body>
+<iframe src="" width="100%" height="100%"></iframe>
+<script>
+document.querySelector("iframe").src = dest;
+</script>
+</body>
