whoops, correct link

--- a/barney/index.html
+++ b/barney/index.html
@@ -1,7 +1,7 @@
 <script src="../static/js/ga.js"></script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
-const dest = 'https://www.youtube.com/watch?v=OodpUmYk3MY';
+const dest = 'https://www.youtube.com/watch?v=GuLcxg5VGuo';
 window.ga('send', 'event', 'redirect', 'redirect', dest, {
   nonInteraction: true
 });
